# doctract

./: README.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
src/basics/: main.py
src/doctract/: constants.py  main.py
src/doctract/rag/: app.py  indexer.py  loader.py  retriever.py
src/doctract/rag/api/: models.py  psql.py
src/exp/: extract.py  main.py  test_rag.py
src/exp/basics/: browser-app.py  chatbot.py
